--- a/CP/content.tex
+++ b/CP/content.tex
@@ -1,3 +1,4 @@
+\pagestyle{fancy}
 
 \section{Introduction}
 The purpose of this Completion Plan is to outline a detailed timeline for the remaining tasks required to finalise the Engineering Capstone Project, ensuring all milestones and deliverables are met within the reminder of the semester 2 2024. This plan revisits the project's deliverables and scope, taking into account recent changes and outlining strategies to overcome any logistical or technical barriers.
@@ -209,21 +210,6 @@ This section details the remaining tasks required to complete the capstone proje
 \textbf{Expected Completion Date}: 20th of October 2024 
 
 \textbf{Feedback Date}: 16th of October 2024
-
-\clearpage 
-\begin{landscape}
-\thispagestyle{empty} 
-\begin{figure}[!htbp] 
-    \centering
-    \includegraphics[width=\paperheight, height=\paperwidth, keepaspectratio]{img/Gantt-Chart-CP.png} 
-    \caption{Gantt Chart - Project Timeline}
-    \label{fig:Gantt Chart}
-\end{figure}
-\end{landscape}
-
-\clearpage 
-
-
 
 \section{Challenges}
 Below are several challenges that have been identified that could potentially impact the timely and successful completion of the remaining tasks. This section outlines these challenges, and the strategies developed to overcome them.
