--- a/final_report/final_report.bib
+++ b/final_report/final_report.bib
@@ -1,3 +1,19 @@
+@unpublished{avionics,
+  author = {Benjamin Wilsmore and Hugo Begg and William Houlahan},
+  title = {Avionics Ground Communications and Redundant Systems},
+  institution = {RMIT University},
+  year = {2024},
+  note = {unpublished},
+}
+
+@unpublished{payload,
+  author = {Aiden , Contini and Jordan , Si Tu and Joshua , Stevens and Ethan , Perry},
+  title = {Payload Electronics},
+  institution = {RMIT University},
+  year = {2024},
+  note = {unpublished},
+}
+
 @inproceedings{Diao2013,
   author = {Diao, Zhanlin and Quan, Haiyang and Lan, Lidong and Han, Yifei},
   year = {2013},
@@ -140,3 +156,52 @@
     year = {2014--},
     url = {\url{https://github.com/bayesian-optimization/BayesianOptimization}}
 }
+
+@proceedings{NAR-58,
+  author = {Kuzel , Mary  and Wolf , Dan },
+  month = {07},
+  publisher = {National Association of Rocketry},
+  title = {Analysis of Altimeter Performance Using Vacuum Chamber Testing and Sensor Monitoring },
+  volume = {58},
+  year = {2016},
+  organization = {NARAM-58}
+}
+
+@proceedings{rocket_telemetry,
+  author = {Richards, Darnell and Young, Dayja},
+  publisher = {International Foundation for Telemetering},
+  title = {Rocket Telemetry - Hardware,  Software Integration and Testing},
+  organization = {International Telemetering Conference Proceedings}
+}
+
+@proceedings{waxeneggerwilfing_2020,
+  author = {Waxenegger-Wilfing, Günther and Dresia, Kai and Oschwald, Michael and Schilling, Klaus},
+  month = {10},
+  title = { Hardware-In-The-Loop Tests of Complex Control Software for Rocket Propulsion Systems},
+  doi = {https://elib.dlr.de/136877/1/IAC2020.pdf},
+  url = {https://elib.dlr.de/136877/},
+  urldate = {2024-10-24},
+  year = {2020},
+  organization = {71st International Astronautical Congress, IAC 2020}
+}
+
+@inproceedings{HIL_rocket,
+  author = {Waxenegger-Wilfing, Günther and Dresia, Kai and Oschwald, M. and Schilling, Klaus},
+  year = {2020},
+  month = {10},
+  pages = {},
+  title = {Hardware-In-The-Loop Tests of Complex Control Software for Rocket Propulsion Systems}
+}
+
+@inproceedings{HIL,
+  author={Bacic, M.},
+  booktitle={Proceedings of the 44th IEEE Conference on Decision and Control}, 
+  title={On hardware-in-the-loop simulation}, 
+  year={2005},
+  volume={},
+  number={},
+  pages={3194-3198},
+  keywords={Control system synthesis;Uncertainty;System testing;Stability;Context modeling;Predictive models;Hardware;Control systems;Aerospace simulation;Missiles},
+  doi={10.1109/CDC.2005.1582653}
+}
+
